--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,10 @@
 {
     "files.associations": {
-        "algorithm": "cpp",
-        "__config": "cpp",
-        "__nullptr": "cpp",
-        "cstddef": "cpp",
-        "exception": "cpp",
-        "initializer_list": "cpp",
-        "new": "cpp",
-        "stdexcept": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "__bit_reference": "cpp",
-        "__functional_base": "cpp",
-        "atomic": "cpp",
+        "iostream": "cpp",
+        "ostream": "cpp",
         "bitset": "cpp",
-        "chrono": "cpp",
-        "deque": "cpp",
         "functional": "cpp",
         "iterator": "cpp",
-        "limits": "cpp",
-        "memory": "cpp",
-        "ratio": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "vector": "cpp"
+        "memory": "cpp"
     }
 }
