--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "bitset": "cpp",
         "functional": "cpp",
         "iterator": "cpp",
-        "memory": "cpp"
+        "memory": "cpp",
+        "type_traits": "cpp",
+        "iosfwd": "cpp",
+        "vector": "cpp"
     }
 }
