--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,46 +1,27 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "ostream": "cpp",
-        "bitset": "cpp",
-        "functional": "cpp",
+        "__bit_reference": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "deque": "cpp",
+        "initializer_list": "cpp",
         "iterator": "cpp",
-        "memory": "cpp",
-        "type_traits": "cpp",
-        "iosfwd": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "unordered_map": "cpp",
         "vector": "cpp",
-        "limits": "cpp",
         "algorithm": "cpp",
+        "bitset": "cpp",
         "chrono": "cpp",
         "ios": "cpp",
-        "tuple": "cpp",
-        "utility": "cpp",
-        "deque": "cpp",
-        "string": "cpp",
+        "limits": "cpp",
         "ratio": "cpp",
-        "__bit_reference": "cpp",
-        "__split_buffer": "cpp",
-        "initializer_list": "cpp",
-        "string_view": "cpp",
-        "typeinfo": "cpp",
-        "istream": "cpp",
-        "stack": "cpp",
         "queue": "cpp",
-        "__locale": "cpp",
-        "locale": "cpp",
-        "__hash_table": "cpp",
-        "unordered_map": "cpp",
-        "__tuple": "cpp",
-        "sstream": "cpp",
-        "__string": "cpp",
-        "__config": "cpp",
-        "__nullptr": "cpp",
-        "cstddef": "cpp",
-        "exception": "cpp",
-        "new": "cpp",
-        "stdexcept": "cpp",
-        "__tree": "cpp",
-        "map": "cpp",
-        "set": "cpp"
+        "stack": "cpp",
+        "utility": "cpp"
     }
 }
