--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,37 +1,25 @@
 {
     "files.associations": {
-        "iostream": "cpp",
-        "__bit_reference": "cpp",
-        "__hash_table": "cpp",
-        "__split_buffer": "cpp",
-        "__tree": "cpp",
         "deque": "cpp",
-        "initializer_list": "cpp",
-        "iterator": "cpp",
+        "list": "cpp",
         "map": "cpp",
         "set": "cpp",
         "string": "cpp",
-        "string_view": "cpp",
         "unordered_map": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp",
-        "bitset": "cpp",
-        "chrono": "cpp",
-<<<<<<< HEAD
-        "ios": "cpp",
-        "limits": "cpp",
-        "ratio": "cpp",
-        "queue": "cpp",
-        "stack": "cpp",
-        "utility": "cpp",
-        "__locale": "cpp",
+        "__functional_base": "cpp",
+        "istream": "cpp",
         "locale": "cpp",
-        "ostream": "cpp",
-        "iosfwd": "cpp",
+        "memory": "cpp",
+        "tuple": "cpp",
+        "utility": "cpp",
+        "__bit_reference": "cpp",
+        "__hash_table": "cpp",
         "__string": "cpp",
-        "type_traits": "cpp"
-=======
-        "ios": "cpp"
->>>>>>> 238e238462bc2e3afcec73152a8baa1fdac61909
+        "__tree": "cpp",
+        "algorithm": "cpp",
+        "string_view": "cpp",
+        "iostream": "cpp",
+        "__locale": "cpp"
     }
 }
